--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,6 +38,13 @@ googleFirebaseFirebasePerf = "1.4.2"
 #retrofit and logging
 retrofit = "2.9.0"
 loggingInterceptor = "4.12.0"
+runtimeLivedata = "1.7.8"
+
+
+
+# Navigation compose
+navigationCompose = "2.8.9"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -88,6 +95,12 @@ firebase-perf = { group = "com.google.firebase", name = "firebase-perf", version
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor"  }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+
+
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+
+
 
 
 [plugins]
