--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.8.1"
-firebaseBom = "33.10.0"
+coilNetworkOkhttp = "3.1.0"
+coilCompose = "3.1.0"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -27,11 +28,14 @@ kotlinxCoroutinesAndroid = "1.9.0"
 kotlinxSerializationJson = "1.7.3"
 
 #firebase
+firebaseBom = "33.10.0"
 firebaseFirestore = "25.1.2"
 firebaseCrashlytics = "19.4.1"
 firebasePerf = "21.0.4"
 googleFirebaseCrashlytics = "3.0.3"
 googleFirebaseFirebasePerf = "1.4.2"
+firebaseAuthKtx = "23.2.0"
+
 
 
 
@@ -46,8 +50,22 @@ runtimeLivedata = "1.7.8"
 navigationCompose = "2.8.9"
 
 
+# lottie
+lottie = "6.6.2"
+
+
+#accompanist
+accompanistPagerIndicators = "0.30.1"
+uiTextGoogleFonts = "1.7.8"
+
+
+
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-ui-text-google-fonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
+coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coilNetworkOkhttp" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -84,11 +102,13 @@ androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 
 
+
 #firebase dependencies
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics", version.ref = "firebaseCrashlytics" }
 firebase-perf = { group = "com.google.firebase", name = "firebase-perf", version.ref = "firebasePerf" }
+firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebaseAuthKtx" }
 
 
 # Retrofit and gson
@@ -97,9 +117,16 @@ converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor"  }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
-
+#navigation
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 
+#lottie
+lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
+
+
+
+#accompanist
+accompanist-pager-indicators = { module = "com.google.accompanist:accompanist-pager-indicators", version.ref = "accompanistPagerIndicators" }
 
 
 
